tests/reference/asr-arithmetic_if1-7cc1489.stderr
semantic error: Arithmetic if (x) requires an integer or real for `x`
 --> tests/errors/arithmetic_if1.f90:5:5
  |
5 | if ("yy") 1, 2, 3
  |     ^^^^ 
